chore: Add admin user register endpoint
