# backend/interface/database/entities/AdminUser.ts
@@ -4,4 +4,6 @@ export interface AdminUser {
   lastName: string;
   email: string;
   password: string;
+  createdAt: Date;
+  updatedAt: Date;
 }
