# backend/interface/https/openapi.yaml
@@ -24,13 +24,52 @@ paths:
             application/json:
               schema: 
                 $ref: '#/components/schemas/AdminLoginResponse'
+        '401':
+          description: Admin not authenticated
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/ErrorResponse'
         '404':
           description: Admin not found
           content:
             application/json:
               schema: 
-                $ref: '#/components/schemas/AdminLoginResponse'
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: server error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/ErrorResponse'
 
+  /admin/register:
+    post:
+      summary: Register an admin
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AdminSignupRequest'
+      responses:
+        '201':
+          description: Session token for admin
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/AdminSignupResponse'
+        '409':
+          description: Admin already exists
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: server error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/ErrorResponse'
 
 components:
   schemas:
@@ -53,6 +92,54 @@ components:
         token:
           type: string
           description: Bearer Token for API Use
+
+    AdminSignupRequest:
+      type: object
+      properties:
+        firstName:
+          type: string
+          description: Admin first name
+        lastName:
+          type: string
+          description: Admin last name
+        email:
+          type: string
+          description: Admin email
+        password:
+          type: string
+          description: Admin password
+      required:
+        - firstName
+        - lastName
+        - email
+        - password
+
+    AdminSignupResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          description: Admin id
+        firstName:
+          type: string
+          description: Admin first name
+        lastName:
+          type: string
+          description: Admin last name
+        email:
+          type: string
+          description: Admin email
+        createdAt:
+          type: string
+        updatedAt:
+          type: string
+      required:
+        - id
+        - firstName
+        - lastName
+        - email
+        - createdAt
+        - updatedAt
     
     ErrorResponse:
       type: object
